--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
